- fix broken global/product notification updates
- convert l10n.php to l10n.yaml
- modify and rename ZMFileLocale to ZMThemeYamlLocale and implement own
  internal map of translations
- make zm_l10n functions use the new locale framework and change ZMTheme to
  load the new l10n.yaml into the locale implementation
- upgrade all code to using _zm, _vzm
- fix updateViewCount for products

Release 0.9.9
- in ZMDbTableMapper handle database exception building auto mappings
- fix SQL errors in ZMZenCartDatabase
- unitTests: add new create/update database test class
- remove support for setting 'isZMDefinePages'
- add full-release patch to make $db throw ZMDatabaseException rather than
  die()
- removed smarty
- introduce yaml based theme config and remove ZMThemeInfo
- remove ToolboxHtml::onload
- remove ZMhemeInfo and use theme.yaml file instead
- fix popups; b:#2927276
- added full release SQL to hide the following config options:
	#  8 = Configuration - Product Listing
	# 10 = Configuration - Logging
	# 14 = Configuration - GZip Compression
	# 18 = Configuration - Product Info
	# 21 = Configuration - New Listing
	# 22 = Configuration - Featured Listing
	# 23 = Configuration - All Listing
	# 24 = Configuration - Index Listing
	# 25 = Configuration - Define Page Status
	# 30 = Configuration - EZ-Pages Settings
- tentatively remove $echo parameter from methods; temlate functions affected:
  staticPageContent(), getPaymentsJavaScript(), getOrderFormContent(); this
	leaves just toolbox tools using this...
- wordpress: Change the way the WP API is loaded to avoid 404 header; see:
  http://www.ardamis.com/2006/07/10/wordpress-googlebot-404-error/
- added ZMSeoRewriter interface to make SEO url rewriting a bit nicer
- fix SEO plugins breaking the site; b:#2927984
- start changing prepopulated template vars: zm_cart=shoppingCart,
  zm_resultList=resultList, zm_account=currentAccount,
	zm_product=currentProduct, zm_coupon=currentCoupon,