@@ -17,27 +17,12 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
  *
- * $Id$
+ * @version $Id$
  */
 ?>
-<h1>Show Settings</h1>
-
-<?php 
-
-foreach ($settingDetails as $group => $groupDetails) { 
-    echo '<h2>',$group,'</h2>';
-    foreach ($groupDetails as $sub => $subDetails) {
-        echo '<h3>',$sub,'</h3>';
-        echo '<table width="98%" border="1">';
-        foreach ($subDetails as $details) {
-            echo '<tr>';
-            echo '<td width="32%">', $details['desc'], '</td>';
-            echo '<td width="28%">', $details['fullkey'], '</td>';
-            echo '<td>', $details['value'], '</td>';
-            echo '</tr>';
-        }
-        echo '</table>';
-    }
-}
-
-?>
+  <form action="<?php echo $admin2->url() ?>" method="POST">
+    <div>
+      <p><label for="masterPassword">Master Password</label> <input type="password" name="masterPassword" value=""></p>
+      <p><input type="submit" value="<?php _vzm('Update') ?>"></p>
+    </div>
+  </form>
