@@ -27,7 +27,7 @@
     // use jquery to toggle value element
 </script>
 
-<form action="<?php echo $toolbox->admin->url() ?>" method="POST">
+<form action="<?php echo $admin2->url() ?>" method="POST">
     <fieldset>
         <legend>Create New Setting</legend>
         <p>
@@ -61,7 +61,7 @@
     </fieldset>
 </form>
 
-<form action="<?php echo $toolbox->admin->url() ?>" method="POST">
+<form action="<?php echo $admin2->url() ?>" method="POST">
     <fieldset>
         <legend>Current Settings</legend>
         <table>
